# VDES

./: .clang-format  .clangd  CMakeLists.txt  Export.bat  HANDOFF.md
Headers/: AISBitsManager.h  ASMDTD.h  ASMManager.h  BitsManager.h  BoundingBox.h  ByteArray.h  Coordinate.h  GeoCalculator.h  ThreadPool.h  ThreadSafeQueue.h  TimerManager.h  UtilityInterface.h  VDES.h  VDESConfigure.h  VDESDTD.h  md5.h
Headers/SQLiteCpp/: Assertion.h  Backup.h  Column.h  Database.h  Exception.h  ExecuteMany.h  Savepoint.h  Statement.h  Transaction.h  VariadicBind.h
Headers/spdlog/: logger-inl.h  pattern_formatter-inl.h  spdlog.h
Headers/spdlog/details/: registry-inl.h
Headers/spdlog/fmt/bundled/: format-inl.h  format.h
MEMORY/: MEMORY.md  design-decisions.md  project-status.md  project-structure.md  user-preferences.md
Publish/: ASM.txt
Publish/include/: VDES.h  VDESConfigure.h  VDESDTD.h
Sources/: AISBitsManager.cpp  ASMManager.cpp  BitsManager.cpp  BoundingBox.cpp  ByteArray.cpp  Coordinate.cpp  GeoCalculator.cpp  ThreadPool.cpp  TimerManager.cpp  UtilityInterface.cpp  VDES.cpp  VDESConfigure.cpp  md5.cpp
Sources/SQLiteCpp/: Backup.cpp  Column.cpp  Database.cpp  Exception.cpp  Savepoint.cpp  Statement.cpp  Transaction.cpp
VDESDemo/: CMakeLists.txt  VDES.txt  VDESDemo.cpp
libVDES/: readme.txt
libVDES/Headers/: VDES.h  VDESConfigure.h  VDESDTD.h
